--- a/MasterChief.DotNet.Core.Dapper/packages.config
+++ b/MasterChief.DotNet.Core.Dapper/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="Dapper" version="1.50.0" targetFramework="net40" />
   <package id="Dapper.Contrib" version="1.50.0" targetFramework="net40" />
+  <package id="MasterChief.DotNet.Core.Contract" version="1.0.0" targetFramework="net40" />
+  <package id="MasterChief.DotNet4.Utilities" version="1.0.0.2" targetFramework="net40" />
 </packages>
