--- a/MasterChief.DotNet.Core.Dapper/MasterChief.DotNet.Core.Dapper.csproj
+++ b/MasterChief.DotNet.Core.Dapper/MasterChief.DotNet.Core.Dapper.csproj
@@ -35,6 +35,12 @@
     <Reference Include="Dapper.Contrib, Version=1.50.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Dapper.Contrib.1.50.0\lib\net40\Dapper.Contrib.dll</HintPath>
     </Reference>
+    <Reference Include="MasterChief.DotNet.Core.Contract, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MasterChief.DotNet.Core.Contract.1.0.0\lib\net40\MasterChief.DotNet.Core.Contract.dll</HintPath>
+    </Reference>
+    <Reference Include="MasterChief.DotNet4.Utilities, Version=1.0.0.2, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MasterChief.DotNet4.Utilities.1.0.0.2\lib\net40\MasterChief.DotNet4.Utilities.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
@@ -49,16 +55,6 @@
     <Compile Include="Helper\QueryParameter.cs" />
     <Compile Include="Helper\QueryResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\MasterChief.DotNet.Core.Contract\MasterChief.DotNet.Core.Contract.csproj">
-      <Project>{9D974AA5-BD71-4A2C-8E1E-F7055AEA5BA2}</Project>
-      <Name>MasterChief.DotNet.Core.Contract</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\MasterChief.DotNet4.Utilities\MasterChief.DotNet4.Utilities.csproj">
-      <Project>{D1DC63AA-DB3A-4C47-9E20-F7474420BA48}</Project>
-      <Name>MasterChief.DotNet4.Utilities</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
