--- a/MasterChief.DotNet.Core.KafkaLog/MasterChief.DotNet.Core.KafkaLog.csproj
+++ b/MasterChief.DotNet.Core.KafkaLog/MasterChief.DotNet.Core.KafkaLog.csproj
@@ -32,6 +32,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
+    <DocumentationFile>bin\Release\MasterChief.DotNet.Core.KafkaLog.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="kafka-net, Version=0.9.0.65, Culture=neutral, processorArchitecture=MSIL">
@@ -39,6 +40,9 @@
     </Reference>
     <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
+    </Reference>
+    <Reference Include="MasterChief.DotNet.Core.Log, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MasterChief.DotNet.Core.Log.1.0.0\lib\net40\MasterChief.DotNet.Core.Log.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -57,12 +61,6 @@
   <ItemGroup>
     <None Include="log4net.config" />
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\MasterChief.DotNet.Core.Log\MasterChief.DotNet.Core.Log.csproj">
-      <Project>{5504B9A5-3D14-4ABD-8BE8-D3DE5A04FC50}</Project>
-      <Name>MasterChief.DotNet.Core.Log</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
