--- a/MasterChief.DotNet.Core.PerRequestCache/MasterChief.DotNet.Core.PerRequestCache.csproj
+++ b/MasterChief.DotNet.Core.PerRequestCache/MasterChief.DotNet.Core.PerRequestCache.csproj
@@ -33,6 +33,9 @@
     <DocumentationFile>bin\Release\MasterChief.DotNet.Core.PerRequestCache.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MasterChief.DotNet.Core.Cache, Version=1.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MasterChief.DotNet.Core.Cache.1.0.0.1\lib\net40\MasterChief.DotNet.Core.Cache.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
@@ -47,10 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MasterChief.DotNet.Core.Cache\MasterChief.DotNet.Core.Cache.csproj">
-      <Project>{6C248D57-DBFA-4A3C-98F0-9AF6AF6E70D0}</Project>
-      <Name>MasterChief.DotNet.Core.Cache</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
