--- a/MasterChief.DotNet.Core.RedisCache/MasterChief.DotNet.Core.RedisCache.csproj
+++ b/MasterChief.DotNet.Core.RedisCache/MasterChief.DotNet.Core.RedisCache.csproj
@@ -33,8 +33,15 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
+    <DocumentationFile>bin\Release\MasterChief.DotNet.Core.RedisCache.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MasterChief.DotNet.Core.Cache, Version=1.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MasterChief.DotNet.Core.Cache.1.0.0.1\lib\net40\MasterChief.DotNet.Core.Cache.dll</HintPath>
+    </Reference>
+    <Reference Include="MasterChief.DotNet4.Utilities, Version=1.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MasterChief.DotNet4.Utilities.1.0.0.1\lib\net40\MasterChief.DotNet4.Utilities.dll</HintPath>
+    </Reference>
     <Reference Include="ServiceStack.Common, Version=5.0.0.0, Culture=neutral, PublicKeyToken=02c12cbda47e6587, processorArchitecture=MSIL">
       <HintPath>..\packages\ServiceStack.Common.5.4.0\lib\net45\ServiceStack.Common.dll</HintPath>
     </Reference>
@@ -75,12 +82,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\MasterChief.DotNet.Core.Cache\MasterChief.DotNet.Core.Cache.csproj">
-      <Project>{6C248D57-DBFA-4A3C-98F0-9AF6AF6E70D0}</Project>
-      <Name>MasterChief.DotNet.Core.Cache</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
