--- a/MasterChief.DotNet.Core.RedisCache/packages.config
+++ b/MasterChief.DotNet.Core.RedisCache/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MasterChief.DotNet.Core.Cache" version="1.0.0.1" targetFramework="net45" />
+  <package id="MasterChief.DotNet4.Utilities" version="1.0.0.1" targetFramework="net45" />
   <package id="ServiceStack.Common" version="5.4.0" targetFramework="net45" />
   <package id="ServiceStack.Interfaces" version="5.4.0" targetFramework="net45" />
   <package id="ServiceStack.Redis" version="5.4.0" targetFramework="net45" />
