--- a/MasterChief.DotNet.Framework.Download/MasterChief.DotNet.Framework.Download.nuspec
+++ b/MasterChief.DotNet.Framework.Download/MasterChief.DotNet.Framework.Download.nuspec
@@ -7,11 +7,11 @@
     <authors>YanZhiwei</authors>
     <owners>$author$</owners>
     <license type="expression">MIT</license>
-    <projectUrl>https://github.com/YanZhiwei/MasterChief/tree/master/MasterChief.DotNet4.Utilities</projectUrl>
+    <projectUrl>https://github.com/YanZhiwei/MasterChief/tree/master/MasterChief.DotNet.Framework.Download</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>1.修复FileDownload方法bug;</releaseNotes>
+    <releaseNotes></releaseNotes>
     <copyright>Copyright YanZhiwei 2019</copyright>
-    <tags>DotNet Utilities</tags>
+    <tags>Mvc FileDownload</tags>
   </metadata>
 </package>
