--- a/MasterChief.DotNet.Infrastructure.ProtobufSerializer/MasterChief.DotNet.Infrastructure.ProtobufSerializer.csproj
+++ b/MasterChief.DotNet.Infrastructure.ProtobufSerializer/MasterChief.DotNet.Infrastructure.ProtobufSerializer.csproj
@@ -44,7 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ProtobufSerializer.cs" />
+    <Compile Include="ProtocolBufferSerializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
