--- a/MasterChief.DotNet.ProjectTemplate.WebApi/MasterChief.DotNet.ProjectTemplate.WebApi.csproj
+++ b/MasterChief.DotNet.ProjectTemplate.WebApi/MasterChief.DotNet.ProjectTemplate.WebApi.csproj
@@ -30,13 +30,17 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\MasterChief.DotNet.ProjectTemplate.WebApi.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="JWT, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\JWT.4.0.0\lib\net46\JWT.dll</HintPath>
+    <Reference Include="JWT, Version=5.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\JWT.5.0.1\lib\net46\JWT.dll</HintPath>
     </Reference>
     <Reference Include="MasterChief.DotNet.Core.Cache, Version=1.0.0.1, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MasterChief.DotNet.Core.Cache.1.0.0.1\lib\net40\MasterChief.DotNet.Core.Cache.dll</HintPath>
+    </Reference>
+    <Reference Include="MasterChief.DotNet.Core.Config, Version=1.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MasterChief.DotNet.Core.Config.1.0.0.1\lib\net40\MasterChief.DotNet.Core.Config.dll</HintPath>
     </Reference>
     <Reference Include="MasterChief.DotNet4.5.Utilities, Version=1.0.0.2, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MasterChief.DotNet4.5.Utilities.1.0.0.2\lib\net45\MasterChief.DotNet4.5.Utilities.dll</HintPath>
@@ -64,7 +68,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Filter\AuthenticateAttribute.cs" />
     <Compile Include="ApiBaseController.cs" />
+    <Compile Include="AppConfigService.cs" />
     <Compile Include="Component\JsonContentNegotiator.cs" />
     <Compile Include="Filter\ControllerExceptionAttribute.cs" />
     <Compile Include="Filter\ValidateModelAttribute.cs" />
@@ -72,9 +78,15 @@
     <Compile Include="Helper\HttpRequestMessageHelper.cs" />
     <Compile Include="Helper\JwtHelper.cs" />
     <Compile Include="Helper\SignatureHelper.cs" />
-    <Compile Include="IApiAuthentication.cs" />
-    <Compile Include="IApiAuthorization.cs" />
+    <Compile Include="IApiAuthenticate.cs" />
+    <Compile Include="IApiAuthorize.cs" />
+    <Compile Include="AuthorizeController.cs" />
+    <Compile Include="IAppConfigService.cs" />
+    <Compile Include="JwtApiAuthenticate.cs" />
+    <Compile Include="JwtApiAuthorize.cs" />
+    <Compile Include="Model\AppConfig.cs" />
     <Compile Include="Model\IdentityToken.cs" />
+    <Compile Include="Model\IdentityUser.cs" />
     <Compile Include="Model\ValidationError.cs" />
     <Compile Include="Model\ValidationFailedResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
