--- a/MasterChief.DotNet.ProjectTemplate.WebApi/packages.config
+++ b/MasterChief.DotNet.ProjectTemplate.WebApi/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="JWT" version="4.0.0" targetFramework="net46" />
+  <package id="JWT" version="5.0.1" targetFramework="net46" />
   <package id="MasterChief.DotNet.Core.Cache" version="1.0.0.1" targetFramework="net46" />
+  <package id="MasterChief.DotNet.Core.Config" version="1.0.0.1" targetFramework="net46" />
   <package id="MasterChief.DotNet4.5.Utilities" version="1.0.0.2" targetFramework="net46" />
   <package id="MasterChief.DotNet4.Utilities" version="1.0.0.4" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net45" />
