--- a/MasterChief.DotNet.Core.Config/MasterChief.DotNet.Core.Config.nuspec
+++ b/MasterChief.DotNet.Core.Config/MasterChief.DotNet.Core.Config.nuspec
@@ -12,6 +12,6 @@
     <description>$description$</description>
     <releaseNotes></releaseNotes>
     <copyright>Copyright YanZhiwei 2019</copyright>
-    <tags>DotNet FileConfig</tags>
+    <tags>Config FileConfig</tags>
   </metadata>
 </package>
