--- a/MasterChief.DotNet.Dapper.Utilities/MasterChief.DotNet.Dapper.Utilities.nuspec
+++ b/MasterChief.DotNet.Dapper.Utilities/MasterChief.DotNet.Dapper.Utilities.nuspec
@@ -12,6 +12,6 @@
     <description>$description$</description>
     <releaseNotes></releaseNotes>
     <copyright>Copyright YanZhiwei 2019</copyright>
-    <tags>DotNet Dapper</tags>
+    <tags>Sql Dapper</tags>
   </metadata>
 </package>
