--- a/MasterChief.DotNet.Infrastructure.Serializer/MasterChief.DotNet.Infrastructure.Serializer.nuspec
+++ b/MasterChief.DotNet.Infrastructure.Serializer/MasterChief.DotNet.Infrastructure.Serializer.nuspec
@@ -12,6 +12,6 @@
     <description>$description$</description>
     <releaseNotes></releaseNotes>
     <copyright>Copyright YanZhiwei 2019</copyright>
-    <tags>DotNet Serializer</tags>
+    <tags>Json Serializer</tags>
   </metadata>
 </package>
