--- a/MasterChief.DotNet.Core.Config/MasterChief.DotNet.Core.Config.csproj
+++ b/MasterChief.DotNet.Core.Config/MasterChief.DotNet.Core.Config.csproj
@@ -36,6 +36,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CacheConfigContext.cs" />
     <Compile Include="ConfigContext.cs" />
     <Compile Include="ConfigProviderHelper.cs" />
     <Compile Include="FileConfigProvider.cs" />
