--- a/MasterChief.DotNet4.Utilities/MasterChief.DotNet4.Utilities.csproj
+++ b/MasterChief.DotNet4.Utilities/MasterChief.DotNet4.Utilities.csproj
@@ -35,10 +35,12 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
+    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows.Forms" />
@@ -106,6 +108,7 @@
     <Compile Include="Common\RegexHelper.cs" />
     <Compile Include="Common\ResourceHelper.cs" />
     <Compile Include="Common\SerializeHelper.cs" />
+    <Compile Include="Common\ServiceHelper.cs" />
     <Compile Include="Common\StringBuilderHelper.cs" />
     <Compile Include="Common\StringHelper.cs" />
     <Compile Include="Common\ThreadHelper.cs" />
