--- a/MasterChief.DotNet4.Utilities/MasterChief.DotNet4.Utilities.csproj
+++ b/MasterChief.DotNet4.Utilities/MasterChief.DotNet4.Utilities.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Common\RandomHelper.cs" />
     <Compile Include="Common\ReflectHelper.cs" />
     <Compile Include="Common\RegexHelper.cs" />
+    <Compile Include="Common\RegistryHelper.cs" />
     <Compile Include="Common\ResourceHelper.cs" />
     <Compile Include="Common\SerializeHelper.cs" />
     <Compile Include="Common\ServiceHelper.cs" />
@@ -120,6 +121,7 @@
     <Compile Include="ComponentModel\NotificationHelper.cs" />
     <Compile Include="ComponentModel\NotificationObject.cs" />
     <Compile Include="Core\Counter.cs" />
+    <Compile Include="Core\ShortcutLink.cs" />
     <Compile Include="DbManager\AccessDbManager.cs" />
     <Compile Include="DbManager\ExcelIDbManager.cs" />
     <Compile Include="DesignPattern\Singleton.cs" />
@@ -139,6 +141,7 @@
     <Compile Include="Model\GeoPoint.cs" />
     <Compile Include="Model\LatLngPoint.cs" />
     <Compile Include="Model\MapCoord.cs" />
+    <Compile Include="Model\ShellLink.cs" />
     <Compile Include="Model\SmtpServer.cs" />
     <Compile Include="Model\Validation.cs" />
     <Compile Include="Manager\AssemblyManager.cs" />
