--- a/MasterChief.DotNet4.WindowsAPI/MasterChief.DotNet4.WindowsAPI.csproj
+++ b/MasterChief.DotNet4.WindowsAPI/MasterChief.DotNet4.WindowsAPI.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MasterChief.DotNet4.Utilities, Version=1.0.0.10, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MasterChief.DotNet4.Utilities.1.0.0.10\lib\net40\MasterChief.DotNet4.Utilities.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,13 +47,18 @@
     <Compile Include="Core\Win32ErrorCodeException.cs" />
     <Compile Include="Model\Session.cs" />
     <Compile Include="Model\Window.cs" />
-    <Compile Include="WindowsCore.cs" />
+    <Compile Include="WindowManipulation.cs" />
+    <Compile Include="WindowsCoreManipulation.cs" />
     <Compile Include="Core\Win32Api.cs" />
     <Compile Include="Enum\StandardAccess.cs" />
     <Compile Include="Enum\StandardDef.cs" />
     <Compile Include="Enum\WinStationAccess.cs" />
     <Compile Include="Model\StandardStruct.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WindowSearch.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
