--- a/MasterChief.DotNet4.WindowsAPI/MasterChief.DotNet4.WindowsAPI.csproj
+++ b/MasterChief.DotNet4.WindowsAPI/MasterChief.DotNet4.WindowsAPI.csproj
@@ -30,6 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\MasterChief.DotNet4.WindowsAPI.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="MasterChief.DotNet4.Utilities, Version=1.0.0.10, Culture=neutral, processorArchitecture=MSIL">
