--- a/MasterChief.DotNet4.WindowsAPI/MasterChief.DotNet4.WindowsAPI.csproj
+++ b/MasterChief.DotNet4.WindowsAPI/MasterChief.DotNet4.WindowsAPI.csproj
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\MasterChief.DotNet4.WindowsAPI.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -39,6 +40,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -47,10 +49,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\Win32ErrorCodeException.cs" />
+    <Compile Include="Desktop.cs" />
     <Compile Include="Model\Session.cs" />
     <Compile Include="Model\Window.cs" />
-    <Compile Include="WindowManipulation.cs" />
-    <Compile Include="WindowsCoreManipulation.cs" />
+    <Compile Include="Window.cs" />
+    <Compile Include="WindowsCore.cs" />
     <Compile Include="Core\Win32Api.cs" />
     <Compile Include="Enum\StandardAccess.cs" />
     <Compile Include="Enum\StandardDef.cs" />
