--- a/MasterChief.DotNet4.WindowsAPI/MasterChief.DotNet4.WindowsAPI.csproj
+++ b/MasterChief.DotNet4.WindowsAPI/MasterChief.DotNet4.WindowsAPI.csproj
@@ -50,8 +50,8 @@
   <ItemGroup>
     <Compile Include="Core\Win32ErrorCodeException.cs" />
     <Compile Include="Desktop.cs" />
-    <Compile Include="Model\Session.cs" />
-    <Compile Include="Model\Window.cs" />
+    <Compile Include="Model\SessionInfo.cs" />
+    <Compile Include="Model\WindowInfo.cs" />
     <Compile Include="MouseKeyboard.cs" />
     <Compile Include="Window.cs" />
     <Compile Include="WindowsCore.cs" />
