--- a/MasterChief.DotNet.Infrastructure.JsonSerializer/packages.config
+++ b/MasterChief.DotNet.Infrastructure.JsonSerializer/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MasterChief.DotNet.Infrastructure.Serialize" version="1.0.0.2" targetFramework="net40" />
+  <package id="MasterChief.DotNet4.Utilities" version="1.0.0.10" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net40" />
 </packages>
