--- a/MasterChief.DotNet4.UIA/MasterChief.DotNet4.UIA.csproj
+++ b/MasterChief.DotNet4.UIA/MasterChief.DotNet4.UIA.csproj
@@ -44,6 +44,7 @@
     <Reference Include="UIAutomationTypes" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="UIACombox.cs" />
     <Compile Include="UIAHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
