--- a/MasterChief.DotNet4.UIA/MasterChief.DotNet4.UIA.csproj
+++ b/MasterChief.DotNet4.UIA/MasterChief.DotNet4.UIA.csproj
@@ -47,6 +47,7 @@
     <Compile Include="UIACombox.cs" />
     <Compile Include="UIAHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UIATree.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
