--- a/MasterChief.DotNet.Core.Dapper/MasterChief.DotNet.Core.Dapper.csproj
+++ b/MasterChief.DotNet.Core.Dapper/MasterChief.DotNet.Core.Dapper.csproj
@@ -27,6 +27,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
+    <DocumentationFile>bin\Release\MasterChief.DotNet.Core.Dapper.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Dapper, Version=1.50.0.0, Culture=neutral, processorArchitecture=MSIL">
