--- a/MasterChief.DotNet4.Utilities/MasterChief.DotNet4.Utilities.csproj
+++ b/MasterChief.DotNet4.Utilities/MasterChief.DotNet4.Utilities.csproj
@@ -110,7 +110,7 @@
     <Compile Include="Common\RegexHelper.cs" />
     <Compile Include="Common\RegistryHelper.cs" />
     <Compile Include="Common\ResourceHelper.cs" />
-    <Compile Include="Common\RetryPolicy.cs" />
+    <Compile Include="Policy\RetryPolicy.cs" />
     <Compile Include="Common\SerializeHelper.cs" />
     <Compile Include="Common\ServiceHelper.cs" />
     <Compile Include="Common\StringBuilderHelper.cs" />
