--- a/MasterChief.DotNet4.Utilities/MasterChief.DotNet4.Utilities.csproj
+++ b/MasterChief.DotNet4.Utilities/MasterChief.DotNet4.Utilities.csproj
@@ -137,24 +137,24 @@
     <Compile Include="Encryptor\DESEncryptor.cs" />
     <Compile Include="Encryptor\MD5Encryptor.cs" />
     <Compile Include="Encryptor\SHA256Encryptor.cs" />
-    <Compile Include="Enum\ExceptionType.cs" />
-    <Compile Include="Enum\ImgCutType.cs" />
-    <Compile Include="Enum\DateTimePart.cs" />
-    <Compile Include="Enum\ImgWaterPosition.cs" />
+    <Compile Include="Enums\ExceptionType.cs" />
+    <Compile Include="Enums\ImgCutType.cs" />
+    <Compile Include="Enums\DateTimePart.cs" />
+    <Compile Include="Enums\ImgWaterPosition.cs" />
     <Compile Include="FileExt.cs" />
     <Compile Include="DbManager\IDbManager.cs" />
     <Compile Include="MimeTypes.cs" />
-    <Compile Include="Model\CsvRow.cs" />
-    <Compile Include="Model\GeoPoint.cs" />
-    <Compile Include="Model\LatLngPoint.cs" />
-    <Compile Include="Model\MapCoord.cs" />
-    <Compile Include="Model\ShellLink.cs" />
-    <Compile Include="Model\SmtpServer.cs" />
-    <Compile Include="Model\Validation.cs" />
+    <Compile Include="Models\CsvRow.cs" />
+    <Compile Include="Models\GeoPoint.cs" />
+    <Compile Include="Models\LatLngPoint.cs" />
+    <Compile Include="Models\MapCoord.cs" />
+    <Compile Include="Models\ShellLink.cs" />
+    <Compile Include="Models\SmtpServer.cs" />
+    <Compile Include="Models\Validation.cs" />
     <Compile Include="Manager\AssemblyManager.cs" />
     <Compile Include="Manager\INIManager.cs" />
     <Compile Include="Manager\SmtpClientManager.cs" />
-    <Compile Include="Model\Win32UserAccount.cs" />
+    <Compile Include="Models\Win32UserAccount.cs" />
     <Compile Include="Operator\ValidateOperator.cs" />
     <Compile Include="Manager\XMLManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
